--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
-reg_oe.JPG
-reg_pu.JPG
-reg_pd.JPG
-reg_a.JPG
-reg_y.JPG
-text.txt
-reg.PNG
+reg_oe.PNG
+reg_pu.PNG
+reg_pd.PNG
+reg_a.PNG
+reg_y.PNG
